# visionRobot

./: .gitignore  .pdm.toml  Pipfile  README.md  pyproject.toml
Test/: TestIOU.py
label/: classes.txt  tmpImg1.txt  tmpImg10.txt  tmpImg11.txt  tmpImg12.txt  tmpImg13.txt  tmpImg14.txt  tmpImg15.txt  tmpImg17.txt  tmpImg18.txt  tmpImg19.txt  tmpImg2.txt  tmpImg20.txt  tmpImg21.txt  tmpImg3.txt  tmpImg4.txt  tmpImg5.txt  tmpImg6.txt  tmpImg7.txt  tmpImg8.txt
src/: Analyzer.py  App.py  BoundingBox.py  UDPSource.py  WSSource.py  boundingBox.py  frameCapture.py  main.py  test.py  tracker_ex.py  yolo.py
src/analyzer/: Analyzer.py
src/detector/: AutoDetector.py  ManualDetector.py  markerDetector.py  markerDetector2.py
src/receiver/: CameraReceiver.py  UDPReceiver.py
src/rtest/: maintest.py
src/sender/: UDPSender.py  WSSender.py
src/states/: detecting.py  serverState.py  singleDetecting.py  singleTracking.py  tracking.py
