[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Guanqun", email = "libramusiciandgq@gmail.com"},
]
dependencies = [
    "torch>=1.13.0",
    "roboflow>=0.2.17",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pdm]
