[tool.poetry]
name = "visionrobot"
version = "0.1.0"
description = ""
authors = ["libra <dongguanqun@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "^4.7.0.68"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

